scss/layout/_controls.scss
@use "../global/variables" as *;
@use "../utils/cards" as *;

.controls {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    gap: 3rem;

    .cards {
        display: flex;
        gap: 3rem;

        .card {
            box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
            transition: transform 0.2s ease;
    
            &:hover {
                transform: scale(1.05);
                transition: transform 0.2s ease;
            }
        }
    }
}

